# mcp-crawl4ai-rag

./: .env.example  .env.test  .gitignore  AI_PROVIDER_COMPARISON_GUIDE.md  AI_PROVIDER_MIGRATION_GUIDE.md  CLAUDE.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.multi-stage  LICENSE  LOCAL_TESTING_GUIDE.md  LOCAL_TESTING_MACOS.md  MACOS_DEPLOYMENT_RTX3090.md  NEO4J_INTEGRATION.md  OLLAMA_EPIC.md  OLLAMA_IMPLEMENTATION_SUMMARY.md  OLLAMA_STORY_1.md  OLLAMA_STORY_2.md  OLLAMA_STORY_3.md  README.md  README_RTX3090_SETUP.md  RTX3090_MCP_SETUP.md  TESTING_FRAMEWORK_INTEGRATION_SUMMARY.md  TESTING_GUIDE.md  TESTING_STRATEGY_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  UTILS_REFACTORING_GUIDE.md  browse_content.py  database-agnostic-architecture.md  database-agnostic-transformation-epic.md  deploy_macos_rtx3090.sh  docker-compose.vllm.yml  docker-compose.yml  env.rtx3090  env.vllm  implementation-plan.md  nginx.conf  prometheus.yml  pyproject.toml  (+22 more)
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
deployment/: README.md
docs/: ollama_provider.md
examples/: ollama_config_example.py
scripts/: confluence_oauth_setup.py  run_docker_tests.py  test-docker.sh  test_providers_locally.py  validate_confluence_config.py  validate_reranking_config.py
src/: crawl4ai_mcp.py  crawl4ai_mcp_refactored.py  utils_abstracted.py  utils_refactored.py
tests/: README.md  RERANKING_TESTING_GUIDE.md  __init__.py  conftest.py  test_ai_providers.py  test_comprehensive_integration.py  test_database_providers.py  test_docker_integration.py  (+11 more)
(+80 files in other folders)
